--- a/developer pages/Developer.html
+++ b/developer pages/Developer.html
@@ -99,6 +99,11 @@ a:active {
   background: black;
   color: orangered;
           }
+        
+          .blockquote{
+            background: orangered;
+            color:black;
+          }
 
       </style>
       <noscript>Running JavaScript is not allowed in the HTML page ... FYI: your Feature to execute scripts is turned off</noscript>
@@ -125,7 +130,7 @@ a:active {
       <br>
       <li><a href="../file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/music%20included%20page/Music%20Included.html">Music Included in Player</a></li>
 
-
+<br>
      <br>
        <br>
        <br>
@@ -178,6 +183,7 @@ a:active {
        <br>
         <h3> I am an amazing coder and have made many games in the past. One of these games is space cat vs selestial dogs. this game involves a cat who eats multiple space dogs who suommon lightning bolts that attack the cat/player. the player can grow and Evolve over time using their points. after levelling up multiple times you get the rare ending screen signifing the reward of completing the game </h3>
         <br>
+        <br>
 
 
 
@@ -186,7 +192,7 @@ a:active {
 
 
   </body>
-  <footer style="text-align: center;">
+  <footer style="text-align: center;" class="blockquote">
    <blockquote cite="">
        <!-- Date Accessed 20240214-->
      </blockquote>
