--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
  
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20pages/Developer.html">Developer Page</a></li>
+      <li><a href="../Sandbox-Music-Player-Promo.github.io/developer pages/Developer.html">Developer Page</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/features%20page/Features.html">Feature Page</a></li>
+      <li><a href="../Sandbox-Music-Player-Promo.github.io/features page/Features.html">Feature Page</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/music%20included%20page/Music%20Included.html">Included Music </a></li>
+      <li><a href="../Sandbox-Music-Player-Promo.github.io/music included page/Music Included.html">Included Music </a></li>
 
      <br>
        <br>
