--- a/features page/Features.html
+++ b/features page/Features.html
@@ -102,7 +102,10 @@ a:active {
              width: 100%;
              padding: 15px;
           }
-
+          .blockquote{
+            background: aqua;
+            color:black;
+          }
       </style>
       <noscript>Running JavaScript is not allowed in the HTML page ... FYI: your Feature to execute scripts is turned off</noscript>
   </head>
@@ -243,7 +246,7 @@ a:active {
       
 
   </body>
-  <footer style="text-align: center;" class="article">
+  <footer style="text-align: center;" class="blockquote">
    <blockquote cite="">
        <!-- Date Accessed 20240214-->
      </blockquote>
