--- a/features page/Features.html
+++ b/features page/Features.html
@@ -53,7 +53,7 @@ a:active {
           header{
             background: black;
            color:aqua;
-          
+           padding: 15px;
            font-size: 5vw;
           }
           .nav{ 
