--- a/features page/Features.html
+++ b/features page/Features.html
@@ -126,9 +126,9 @@ a:active {
     <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20pages/Developer.html">Developer page</a></li>
+      <li><a href="../developer pages/Developer.html">Developer page</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/music%20included%20page/Music%20Included.html">Music Included in Player </a></li>
+      <li><a href="../music included page/Music Included.html">Music Included in Player </a></li>
 
      <br>
      <br>
