--- a/music included page/Music Included.html
+++ b/music included page/Music Included.html
@@ -134,9 +134,9 @@ a:active {
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20pages/Developer.html">Developer Page</a></li>
+      <li><a href="../developer pages/Developer.html">Developer Page</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/features%20page/Features.html">Features Page</a></li>
+      <li><a href="../features page/Features.html">Features Page</a></li>
 
      </nav>
 
