--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
            box-sizing: border-box;
            font-size: 1.75vw;
          }
-          div{
-             border:thin dotted rgb(255, 68, 0)
-          } 
+          
           header{
           background:black;
           color: darkorchid;
@@ -79,14 +77,18 @@
              padding: 15px;
              border: thick double turquoise;
           }
-
+        
+          .blockquote{
+            background: black;
+            color:darkorchid;
+          }
       </style>
       <noscript>Running JavaScript is not allowed in the HTML page ... FYI: your Feature to execute scripts is turned off</noscript>
   </head>
 
   <!--Start here, BODY Semantic Tags-->
   <body>
-    <div> This page is not complete</div>
+  
 
 
      <header class="header">
