--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
      </nav>
 
   </body>
-  <footer style="text-align: center;" class="header">
+  <footer style="text-align: center;" class="blockquote">
    <blockquote cite="">
        <!-- Date Accessed 20240214-->
      </blockquote>
