--- a/music included page/Music Included.html
+++ b/music included page/Music Included.html
@@ -25,12 +25,12 @@
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
       <style>
 a:link {
-  color: black;
+  color: rgb(8, 0, 255);
   text-decoration: underline;
 }
 
 a:visited {
-  color: black;
+  color: rgb(8, 0, 255);
   text-decoration:underline;
 }
 
@@ -40,7 +40,7 @@ a:hover {
 }
 
 a:active {
-  color: aquamarine;
+  color: darkorange;
   text-decoration:wavy;
 }
          *{
