--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -23,8 +23,11 @@
       <!-- Cyber Security Note about JavaScript in Browsers-->
 
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
-      <style>
-    a:link {
+   <style>
+   
+  
+      
+ a:link {
   color: orangered;
   text-decoration: underline;
 }
@@ -43,6 +46,9 @@ a:active {
   color: orangered;
   text-decoration:wavy;
 }
+#special{color:aqua} 
+    #special1{color:darkorchid} 
+    #special2{color:lawngreen}
          *{
            box-sizing: border-box;
            font-size: 1.75vw;
@@ -124,11 +130,11 @@ a:active {
      
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
-      <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
+      <li><a id=special1 href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a href="../features page/Features.html">Features of my music player</a></li>
+      <li><a id=special href="../features page/Features.html">Features of my music player</a></li>
       <br>
-      <li><a href="../music included page/Music Included.html">Music Included in Player</a></li>
+      <li><a id=special2 href="../music included page/Music Included.html">Music Included in Player</a></li>
 
 <br>
      <br>
