--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -46,9 +46,67 @@ a:active {
   color: orangered;
   text-decoration:wavy;
 }
-#special{color:aqua} 
-    #special1{color:darkorchid} 
-    #special2{color:lawngreen}
+#special{ 
+  a:link {
+  color: orangered;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: orangered;
+  text-decoration:underline;
+}
+
+a:hover {
+  color: darkorchid;
+  text-decoration: wavy;
+}
+
+a:active {
+  color: darkorchid;
+  text-decoration:wavy;
+} 
+}
+#special1{ 
+   a:link {
+  color: orangered;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: orangered;
+  text-decoration:underline;
+}
+
+a:hover {
+  color: aqua;
+  text-decoration: wavy;
+}
+
+a:active {
+  color: aqua;
+  text-decoration:wavy;
+} } 
+#special2{
+    a:link {
+  color: orangered;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: orangered;
+  text-decoration:underline;
+}
+
+a:hover {
+  color: lawngreen;
+  text-decoration: wavy;
+}
+
+a:active {
+  color: lawngreen;
+  text-decoration:wavy;
+} }
          *{
            box-sizing: border-box;
            font-size: 1.75vw;
