--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -63,7 +63,7 @@ a:hover {
 }
 
 a:active {
-  color: darkorchid;
+  color: orangered;
   text-decoration:wavy;
 } 
 }
@@ -84,7 +84,7 @@ a:hover {
 }
 
 a:active {
-  color: aqua;
+  color: orangered;
   text-decoration:wavy;
 } } 
 #special2{
@@ -104,7 +104,7 @@ a:hover {
 }
 
 a:active {
-  color: lawngreen;
+  color: orangered;
   text-decoration:wavy;
 } }
          *{
