--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -27,26 +27,9 @@
    
   
       
- a:link {
-  color: orangered;
-  text-decoration: underline;
-}
-
-a:visited {
-  color: orangered;
-  text-decoration:underline;
-}
-
-a:hover {
-  color: aqua;
-  text-decoration: wavy;
-}
-
-a:active {
-  color: orangered;
-  text-decoration:wavy;
-}
+ 
 #special{ 
+ 
   a:link {
   color: orangered;
   text-decoration: underline;
@@ -63,7 +46,7 @@ a:hover {
 }
 
 a:active {
-  color: orangered;
+  color: darkorchid;
   text-decoration:wavy;
 } 
 }
@@ -84,7 +67,7 @@ a:hover {
 }
 
 a:active {
-  color: orangered;
+  color: aqua;
   text-decoration:wavy;
 } } 
 #special2{
@@ -104,7 +87,7 @@ a:hover {
 }
 
 a:active {
-  color: orangered;
+  color: lawngreen;
   text-decoration:wavy;
 } }
          *{
