--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -27,9 +27,26 @@
    
   
       
- 
+ a:link {
+  color: orangered;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: orangered;
+  text-decoration:underline;
+}
+
+a:hover {
+  color: aqua;
+  text-decoration: wavy;
+}
+
+a:active {
+  color: orangered;
+  text-decoration:wavy;
+}
 #special{ 
- 
   a:link {
   color: orangered;
   text-decoration: underline;
