--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -188,9 +188,9 @@ a:active {
      
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
-      <li><a id=special1 href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
+      <li><a id=special href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a id=special href="../features page/Features.html">Features of my music player</a></li>
+      <li><a id=special1 href="../features page/Features.html">Features of my music player</a></li>
       <br>
       <li><a id=special2 href="../music included page/Music Included.html">Music Included in Player</a></li>
 
