--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -37,12 +37,12 @@ a:visited {
 }
 
 a:hover {
-  color: darkorchid;
+  color: lawngreen;
   text-decoration: wavy;
 }
 
 a:active {
-  color: darkorchid;
+  color: lawngreen;
   text-decoration:wavy;
 } 
 }
