--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -24,9 +24,29 @@
 
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
    <style>
-   
+     a:link {
+  color: orangered;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: orangered;
+  text-decoration:underline;
+}
+
+a:hover {
+  color: black;
+  text-decoration: wavy;
+}
+
+a:active {
+  color: black;
+  text-decoration:wavy;
+} 
+
    #special{ 
-  a:link {
+  
+    a:link {
   color: orangered;
   text-decoration: underline;
 }
@@ -66,8 +86,8 @@ a:active {
   color: aqua;
   text-decoration:wavy;
 } } 
-#special2{
-    a:link {
+
+#special2{  a:link {
   color: orangered;
   text-decoration: underline;
 }
@@ -85,7 +105,7 @@ a:hover {
 a:active {
   color: lawngreen;
   text-decoration:wavy;
-} } 
+} }
  
 
          *{
