--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -24,7 +24,7 @@
 
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
    <style>
-    #special{ 
+    #special5{ 
   
   a:link {
 color: orangered;
@@ -46,7 +46,7 @@ color: lawngreen;
 text-decoration:wavy;
 } 
 }
-#special1{ 
+#special3{ 
  a:link {
 color: orangered;
 text-decoration: underline;
@@ -67,7 +67,7 @@ color: aqua;
 text-decoration:wavy;
 } } 
 
-#special2{  a:link {
+#special4{  a:link {
 color: orangered;
 text-decoration: underline;
 }
@@ -86,6 +86,26 @@ a:active {
 color: lawngreen;
 text-decoration:wavy;
 } }
+
+ a:link {
+  color: orangered;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: orangered;
+  text-decoration:underline;
+}
+
+a:hover {
+  color: black;
+  text-decoration: wavy;
+}
+
+a:active {
+  color: black;
+  text-decoration:wavy;
+} 
 
 
          *{
@@ -169,11 +189,11 @@ text-decoration:wavy;
      
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
-      <li><a id=special href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
+      <li><a id=special5 href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a id=special1 href="../features page/Features.html">Features of my music player</a></li>
+      <li><a id=special3 href="../features page/Features.html">Features of my music player</a></li>
       <br>
-      <li><a id=special2 href="../music included page/Music Included.html">Music Included in Player</a></li>
+      <li><a id=special4 href="../music included page/Music Included.html">Music Included in Player</a></li>
 
 <br>
      <br>
