--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -87,7 +87,25 @@ color: lawngreen;
 text-decoration:wavy;
 } }
 
+ a:link {
+  color: orangered;
+  text-decoration: underline;
+}
 
+a:visited {
+  color: orangered;
+  text-decoration:underline;
+}
+
+a:hover {
+  color: black;
+  text-decoration: wavy;
+}
+
+a:active {
+  color: black;
+  text-decoration:wavy;
+} 
 
 
          *{
