--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -24,7 +24,7 @@
 
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
    <style>
-    #special5{ 
+   /* #special5{ 
   
   a:link {
 color: orangered;
@@ -85,7 +85,7 @@ text-decoration: wavy;
 a:active {
 color: lawngreen;
 text-decoration:wavy;
-} }
+} } */
 
  a:link {
   color: orangered;
@@ -98,12 +98,12 @@ a:visited {
 }
 
 a:hover {
-  color: black;
+  color: aqua;
   text-decoration: wavy;
 }
 
 a:active {
-  color: black;
+  color: aqua;
   text-decoration:wavy;
 } 
 
