stop the fortnite item shop before its to late

--- a/childPages/features page/Features.html
+++ b/childPages/features page/Features.html
@@ -36,12 +36,12 @@ a:visited {
 }
 
 a:hover {
-  color: lawngreen;
+  color: orangered;
   text-decoration: wavy;
 }
 
 a:active {
-  color: aquamarine;
+  color: orangered;
   text-decoration:wavy;
 }
 
