--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 }
 
 a:visited {
-  color: aqua;
+  color: lawngreen;
   text-decoration:underline;
 }
 
 a:hover {
-  color: lawngreen;
+  color: orangered;
   text-decoration: wavy;
 }
 
