--- a/childPages/music included page/Music Included.html
+++ b/childPages/music included page/Music Included.html
@@ -25,12 +25,12 @@
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
       <style>
 a:link {
-  color: lawngreen;
+  color: darkorchid;
   text-decoration: underline;
 }
 
 a:visited {
-  color: lawngreen;
+  color: darkorchid;
   text-decoration:underline;
 }
 
