--- a/childPages/features page/Features.html
+++ b/childPages/features page/Features.html
@@ -169,6 +169,10 @@ a:active {
 
        <section class="section">
         <p>
+          keyboard key code:<br> Z changes background images. <br> P is play.<br> M is mute. <br> L is loop one, I is loop infinitly. <br> ALT is stop. <br> R is rewind and F is fast forward. <br> A changes album covers. <br> G is random Song Selection.<br> <br> 
+        </p>
+        <p>
+
           <img src="https://upload.wikimedia.org/wikipedia/en/2/2a/Linkin_Park_Hybrid_Theory_Album_Cover.jpg" alt="../Linkin_Park_Hybrid_Theory_Album_Cover.jpg" title="Hybrid Theory, Released in 2000" style="max-width:100%;height:auto;">
           <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
           <!-- Play with percentages-->
