--- a/index.html
+++ b/index.html
@@ -122,14 +122,16 @@ a:active {
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
       <li><a href="../Sandbox-Music-Player-Promo.github.io/childPages/developer pages/Developer.html">Developer Page, has info on the developer of the website and music player</a></li>
-      <br>
+      <br> 
       <li><a href="../Sandbox-Music-Player-Promo.github.io/childPages/features page/Features.html">Feature Page, full of features that my player will include</a></li>
       <br>
       <li><a href="../Sandbox-Music-Player-Promo.github.io/childPages/music included page/Music Included.html">Included Music in the player. </a></li>
 
   
 
-
+     <p>
+      Key code located on Features Page. 2nd link.
+     </p>
      </nav>
 
   </body>
