--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -24,7 +24,7 @@
 
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
    <style>
-    #special5{ 
+  /*  #special5{ 
   
   a:link {
 color: orangered;
@@ -85,8 +85,8 @@ text-decoration: wavy;
 a:active {
 color: lawngreen;
 text-decoration:wavy;
-} } 
-/*
+} } */
+
  a:link {
   color: orangered;
   text-decoration: underline;
@@ -106,7 +106,7 @@ a:active {
   color: aqua;
   text-decoration:wavy;
 } 
-*/
+
 
          *{
            box-sizing: border-box;
