funny clown image

--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -218,7 +218,7 @@ a:active {
      <main class="main">
        <h1> THE DEVELOPER</h1>
        <p>
-        <img src="https://qph.cf2.quoracdn.net/main-qimg-c124e649fcc0f98fc87e672caa25d42d-lq" alt="../Images/DevPicture101.jfif" title="DEV" style="max-width:50%;height:auto;">
+        <img src="https://i.redd.it/void-warrior-absenz-contender-spikeclone-toxic-flash-v0-5tmfuhbylc8c1.jpg?width=2880&format=pjpg&auto=webp&s=9082c80c97ac5009efd6cd7e3af9482c5e72c5c4" alt="../Images/funny_clown.jpg" title="DEV" style="max-width:75%;height:auto;">
         <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
         <!-- Play with percentages-->
     </p>
