nick eh 30 cup winner

--- a/childPages/developer pages/Developer.html
+++ b/childPages/developer pages/Developer.html
@@ -263,9 +263,9 @@ a:active {
        <!-- Date Accessed 20240214-->
      </blockquote>
      <p>
-       <strong>"Whatever your doing give 100%, unless you donating blood."</strong>
-       <em>- Bill Murray</em>
-     </p>
+      <strong>"Never back down, Never give up"</strong>
+      <em>- Nick eh 30 </em>
+    </p>
      
      &copy William Monk, powered by W MONK in Github
  <!-- Other Information possible like Number of visitor, location, author contact info-->
