--- a/childPages/music included page/Music Included.html
+++ b/childPages/music included page/Music Included.html
@@ -288,8 +288,8 @@ a:active {
        <!-- Date Accessed 20240214-->
      </blockquote class= "blockquote">
      <p>
-       <strong>"Whatever your doing give 100%, unless you donating blood."</strong>
-       <em>- Bill Murray</em>
+       <strong>"Never back down, Never give up"</strong>
+       <em>- Nick eh 30 </em>
      </p>
      
      &copy William Monk, powered by W MONK in Github
